DEPLOY lptest output link

--- a/lptest/scheme/edit.html
+++ b/lptest/scheme/edit.html
@@ -246,7 +246,7 @@
             try{
                 rs=JSON.parse(rs)
                 if(rs.status==1){
-                    window.location="/templates/{{templatename}}/out"
+                    window.location="/templates/{{templatename}}/out/index.html"
                 }else{
                     alert(rs.error)
                 }
