DEPLOY lptest path

--- a/lptest/scheme/edit.html
+++ b/lptest/scheme/edit.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Landing page builder</title>
 
-    <link href="/scheme/dragula.css" rel="stylesheet">
-    <link href="/scheme/cus.css" rel="stylesheet">
+    <link href="{{schemePath}}/dragula.css" rel="stylesheet">
+    <link href="{{schemePath}}/cus.css" rel="stylesheet">
 
     {{customcss}}
 </head>
