--- a/lptest/scheme/edit.html
+++ b/lptest/scheme/edit.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 </div>
-<div id="preloader" class="preloader-inner"><div></div></div>
+<div id="preloader" class="hidden preloader-inner"><div></div></div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 {{customjs}}
 <script src="/scheme/dragula.min.js"></script>
