--- a/lptest/scheme/edit.html
+++ b/lptest/scheme/edit.html
@@ -144,6 +144,8 @@
             }else{
                 return false
             }
+            //replace trashtitle token for other
+            el.innerHTML=el.innerHTML.replace(new RegExp("\{\{trashtitle\}\}","gm"),"")
         }
         checkEditable(el)
 
@@ -159,7 +161,7 @@
             e.preventDefault()
             let buttonurl=btnEl.getAttribute("onclick")
             let buttontitle=btnEl.getAttribute("title")
-            console.log(btnEl)
+
             let innerText=btnEl.innerHTML
             if(buttonurl)
                 buttonurl=buttonurl.replace("window.location=","").replace(/['"]/g,"")
