DEPLOY lptest update test tool

--- a/lptest/scheme/edit.html
+++ b/lptest/scheme/edit.html
@@ -264,6 +264,7 @@
 
     $( document ).ready(function() {
         document.querySelector("#preloader").classList.add("hidden")
+        checkEditable(document.querySelector("div[lp-data-id=landingpage-content]"))
     });
 
 
