DEPLOY lptest onclick button change

--- a/lptest/scheme/edit.html
+++ b/lptest/scheme/edit.html
@@ -177,7 +177,7 @@
                 btnEl.innerHTML=document.querySelector("#modalInputText").value
                 changeButtonOnclickEvent(btnEl)
             }
-            showModal(buttonurl,buttontitle,innerText)
+            showModal(buttontitle,buttonurl,innerText)
             //call recursive to apply new attribute value
 
         }
