--- a/lptest/scheme/edit.html
+++ b/lptest/scheme/edit.html
@@ -33,6 +33,24 @@
     </div>
 </div>
 
+<div id="messageModal"  class="z-30 h-screen w-full fixed left-0 top-0 flex justify-center items-center bg-black bg-opacity-50 hidden">
+    <!-- modal -->
+    <div class="bg-white rounded shadow-lg sm:w-1/3 m-4 w-full">
+        <!-- modal header -->
+        <div class="border-b px-4 py-2 flex justify-between items-center">
+            <h3 id="messageTitle">Message</h3>
+            <button class="text-black close-modal">&cross;</button>
+        </div>
+        <!-- modal body -->
+        <div class="p-3">
+            <div id="messageContent"></div>
+        </div>
+        <div class="flex justify-end items-center w-100 border-t p-3">
+            <button class="bg-gray-600 hover:bg-gray-700 px-3 py-1 rounded text-white mr-1 close-modal">Cancel</button>
+            <button lp-data-id="confirmMessage" class="bg-red-600 hover:bg-red-700 px-3 py-1 rounded text-white mr-1">OK</button>
+        </div>
+    </div>
+</div>
 
 <div class="btnmodal h-screen w-full fixed left-0 top-0 flex justify-center items-center bg-black bg-opacity-50 hidden">
     <!-- modal -->
@@ -59,16 +77,18 @@
     </div>
 </div>
 <div id="preloader" class="hidden preloader-inner"><div></div></div>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
 {{customjs}}
 <script src="{{rootPath}}/scheme/dragula.min.js"></script>
 <script>
     //==========modal script
 
     const btnmodal = document.querySelector('.btnmodal');
+    const messageModal = document.querySelector('#messageModal');
     const closeModal = document.querySelectorAll('.close-modal');
     const submitModal = document.querySelectorAll('.submit-modal');
     let fnAfterSubmitModal=()=>{}
+    let fnAterConfirmModal=()=>{}
     function showModal(title,url,text) {
         document.querySelector("#modalInputTitle").value=title
         document.querySelector("#modalInputUrl").value=url
@@ -79,6 +99,7 @@
     closeModal.forEach(close => {
         close.addEventListener('click', function (){
             btnmodal.classList.add('hidden')
+            messageModal.classList.add('hidden')
         });
     });
 
@@ -88,70 +109,25 @@
             btnmodal.classList.add('hidden')
         });
     });
-
-    //=====================
-    const MTools={{mtoolcontent}}
-        const navitemtemplate=`{{navitemtemplate}}`
-
-    const drake=dragula([document.querySelector("div.landingpage-pickzone"),...document.querySelectorAll("div.drop-zone"),...document.querySelectorAll("div.mega-menu")],{
-        copy: function (el, target) {
-            return !target.classList.contains("drop-zone")
-
-        },
-        moves: function (el, source, handle, sibling) {
-            if(el.classList.contains("cus-not-draggable"))return false
-            return true; // elements are always draggable by default
-        },
-
-        copySortSource: false,
-        accepts: function (el, target, source, sibling) {
-
-            return target.classList.contains("drop-zone")
-            //return true; // elements can be dropped in any of the `containers` by default
-        },
+    document.querySelector("[lp-data-id=confirmMessage]").addEventListener('click', (e)=>{
+        fnAfterConfirmModal()
+        messageModal.classList.add('hidden')
     });
 
-    drake.on('shadow', (el, target, source) => {
 
-        if(!target||!target.classList.contains("drop-zone"))return
-        if(!source||!(source.classList.contains("landingpage-pickzone")||source.classList.contains("mega-menu")))return
-        el.className="m-auto landingpage-item-content relative gu-transit"
+    function showMessage(title,message){
+        var messageTitle=document.querySelector("#messageTitle")
+        var messageContent=document.querySelector("#messageContent")
+        messageTitle.style.color="gray"
+        if(title=="Error")messageTitle.style.color="red";
+        if(title=="Success")messageTitle.style.color="Green"
 
-
-        const content=MTools[el.getAttribute("lp-data-id").replace("landingpage-tool-","")]
-
-        el.innerHTML=content
-
-
-    })
-
-    drake.on('drop', (el, target, source,sibling) => {
-        if(!target||!target.classList.contains("drop-zone"))return
-        if(!source||!(source.classList.contains("landingpage-pickzone")||source.classList.contains("mega-menu")))return
-        if(el.getAttribute("lp-data-id")=="a"){
-            //generate nav item
-            const name=prompt("Navigation Name:","")
-            if(name!=null&&name.trim()!=""){
-                const id=name.replace(" ","-")
-                const content=navitemtemplate.replace(new RegExp("\{\{Id\}\}","gm"),id).replace(new RegExp("\{\{Name\}\}","gm"),name)
-                const navels=document.querySelectorAll(".landingpage-navitem-content")
-                for(let i=0,n=navels.length;i<n;i++){
-                    navels[i].innerHTML+=content
-                    checkEditable(navels[i])
-                }
-                el.setAttribute("lp-data-id","a_"+id+"_"+name)
-                el.innerHTML=el.innerHTML.replace(new RegExp("\{\{Id\}\}","gm"),id).replace(new RegExp("\{\{Name\}\}","gm"),name).replace(new RegExp("\{\{trashtitle\}\}","gm"),name)
-            }else{
-                return false
-            }
-
-        }
-        //replace trashtitle token for other
-        el.innerHTML=el.innerHTML.replace(new RegExp("\{\{trashtitle\}\}","gm"),"")
-        checkEditable(el)
+        messageTitle.innerHTML=title;
+        messageContent.innerHTML=message;
+        messageModal.classList.remove("hidden")
+    }
 
 
-    })
 
 
 
@@ -231,12 +207,22 @@
     }
     function RemoveItem(el){
         const vtypes=el.parentNode.getAttribute("lp-data-id").split("_")
-        if(vtypes.length>0){
-            if(vtypes[0]=="a"){
-                document.querySelector("[lp-data-id=landingpage-navitem-"+vtypes[1]+"]").remove()
+        try {
+            if (vtypes.length > 0) {
+                if (vtypes[0] == "a") {
+                    document.querySelector("[lp-data-id=landingpage-navitem-" + vtypes[1] + "]").remove()
+                }
             }
+        }catch (e) {
+            //skip if not found
         }
         el.parentNode.remove()
+    }
+    function RemoveStaticItem(el) {
+        fnAfterConfirmModal = () => {
+            el.parentNode.remove()
+        }
+        showMessage("Message", "If you delete, this item will not generate unless you create a fresh content of this template. Are you sure?")
     }
 
     function DisableContentEditable(){
@@ -250,7 +236,13 @@
         document.querySelectorAll(".landingpage-trash").forEach(item=>{
             item.remove();
         })
-        $.post('{{rootPath}}/test/submit/{{submiturl}}',{"data":document.querySelector("div[lp-data-id=landingpage-content]").innerHTML}).done((rs)=>{
+        fetch('{{rootPath}}/test/submit/{{submiturl}}', {
+            method: 'POST',
+            body: "data=" + document.querySelector("div[lp-data-id=landingpage-content]").innerHTML,
+            headers: {
+                'Content-Type': 'application/x-www-form-urlencoded'
+            }
+        }).then(rs=>rs.text()).then(rs=>{
             console.log(rs)
             try{
                 rs=JSON.parse(rs)
@@ -263,13 +255,82 @@
                 alert(e.message)
             }
             document.querySelector("#preloader").classList.add("hidden")
-        });
+        }).catch(err=>{
+            alert(e.message)
+            document.querySelector("#preloader").classList.add("hidden")
+        })
+
     }
 
-    $( document ).ready(function() {
+    window.onload = function(e) {
         document.querySelector("#preloader").classList.add("hidden")
         checkEditable(document.querySelector("div[lp-data-id=landingpage-content]"))
-    });
+
+        //=====================
+        const MTools={{mtoolcontent}}
+        const navitemtemplate=`{{navitemtemplate}}`
+
+        const drake=dragula([document.querySelector("div.landingpage-pickzone"),...document.querySelectorAll("div.drop-zone"),...document.querySelectorAll("div.mega-menu")],{
+            copy: function (el, target) {
+                return !target.classList.contains("drop-zone")
+
+            },
+            moves: function (el, source, handle, sibling) {
+                if(el.classList.contains("cus-not-draggable"))return false
+                return true; // elements are always draggable by default
+            },
+
+            copySortSource: false,
+            accepts: function (el, target, source, sibling) {
+
+                return target.classList.contains("drop-zone")
+                //return true; // elements can be dropped in any of the `containers` by default
+            },
+        });
+
+        drake.on('shadow', (el, target, source) => {
+
+            if(!target||!target.classList.contains("drop-zone"))return
+            if(!source||!(source.classList.contains("landingpage-pickzone")||source.classList.contains("mega-menu")))return
+            el.className="m-auto landingpage-item-content relative gu-transit"
+
+
+            const content=MTools[el.getAttribute("lp-data-id").replace("landingpage-tool-","")]
+
+            el.innerHTML=content
+
+
+        })
+
+        drake.on('drop', (el, target, source,sibling) => {
+            if(!target||!target.classList.contains("drop-zone"))return
+            if(!source||!(source.classList.contains("landingpage-pickzone")||source.classList.contains("mega-menu")))return
+            if(el.getAttribute("lp-data-id")=="a"){
+                //generate nav item
+                const name=prompt("Navigation Name:","")
+                if(name!=null&&name.trim()!=""){
+                    const id=name.replace(" ","-")
+                    const content=navitemtemplate.replace(new RegExp("\{\{Id\}\}","gm"),id).replace(new RegExp("\{\{Name\}\}","gm"),name)
+                    const navels=document.querySelectorAll(".landingpage-navitem-content")
+                    for(let i=0,n=navels.length;i<n;i++){
+                        navels[i].innerHTML+=content
+                        checkEditable(navels[i])
+                    }
+                    el.setAttribute("lp-data-id","a_"+id+"_"+name)
+                    el.innerHTML=el.innerHTML.replace(new RegExp("\{\{Id\}\}","gm"),id).replace(new RegExp("\{\{Name\}\}","gm"),name).replace(new RegExp("\{\{trashtitle\}\}","gm"),name)
+                }else{
+                    return false
+                }
+
+            }
+            //replace trashtitle token for other
+            el.innerHTML=el.innerHTML.replace(new RegExp("\{\{trashtitle\}\}","gm"),"")
+            checkEditable(el)
+
+
+        })
+    }
+
 
 
 </script>
