DEPLOY lptest handle error

--- a/lptest/scheme/edit.html
+++ b/lptest/scheme/edit.html
@@ -251,7 +251,7 @@
                     alert(rs.error)
                 }
             }catch (e) {
-                alert(e.message)
+                alert(rs)
             }
             document.querySelector("#preloader").classList.add("hidden")
         }).catch(err=>{
